// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic export 1`] = `
Array [
  "[4,0,\\"meta\\",1,\\"test\\",\\"0.0.0\\"]",
  "[4,1,\\"account\\",\\"mock_account_export_0\\",\\"pQNKgto\\",141]",
  "[4,2,\\"account\\",\\"mock_account_export_1\\",\\"2KTQvcmdW2zTneCnPImZvgYLGi5rIBgc\\",141]",
  "[4,3,\\"account\\",\\"mock_account_export_2\\",\\"23PIvq83MrbdhquMsST6yH4PX3dBptsh\\",141]",
]
`;

exports[`basic export with pad 1`] = `
Array [
  "[4,0,\\"meta\\",1,\\"test\\",\\"0.0.0\\"]                                                 ",
  "[4,1,\\"account\\",\\"mock_account_export_0\\",\\"pQNKgto\\",141]                         ",
  "[4,2,\\"account\\",\\"mock_account_export_1\\",\\"2KTQvcmdW2zTneCnPImZvgYLGi5rIBgc\\",141]",
  "[4,3,\\"account\\",\\"mock_account_export_2\\",\\"23PIvq83MrbdhquMsST6yH4PX3dBptsh\\",141]",
]
`;
